@@ -11,7 +11,7 @@
 	</parent>
 	<groupId>com.deltadental.pcp.search.service</groupId>
 	<artifactId>pcp-search-service</artifactId>
-	<version>3.0.0</version>
+	<version>1.0.0</version>
 	<name>pcp-search-service</name>
 	<description>Wrapper Springboot Service for PCP Inquiry Service</description>
 	<properties>
@@ -37,6 +37,9 @@
 
 		<mokito.version>3.1.0</mokito.version>
 
+		<moco.version>0.11.0</moco.version>
+		<easymock.version>2.4</easymock.version>
+
 		<!-- Delta Dental's Platform common library with frequently needed utilities -->
 		<services-common-library-version>1.0.12</services-common-library-version>
 
@@ -47,21 +50,15 @@
 		<docker.plugin.version>0.2.3</docker.plugin.version>
 
 		<!-- SonarQube properties -->
+
 		<jacoco.version>0.8.5</jacoco.version>
-		<jacoco.outputDir>${project.build.directory}</jacoco.outputDir>
-		<jacoco.out.ut.file>jacoco-ut.exec</jacoco.out.ut.file>
-		<jacoco.out.it.file>jacoco-it.exec</jacoco.out.it.file>
-		<sonar.projectKey>${project.name}</sonar.projectKey>
+		<sonar.projectKey>PCP-SEARCH-SERVICE</sonar.projectKey>
 		<sonar.projectName>PCP Search Service</sonar.projectName>
 		<sonar.language>java</sonar.language>
 		<sonar.sourceEncoding>UTF-8</sonar.sourceEncoding>
 		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
 		<sonar-jacoco-listeners.version>1.4</sonar-jacoco-listeners.version>
-		<sonar.jacoco.reportPath>${jacoco.outputDir}/${jacoco.out.ut.file}</sonar.jacoco.reportPath>
-		<sonar.surefire.reportsPath>target/surefire-reports</sonar.surefire.reportsPath>
-		<sonar.jacoco.itReportPath>${jacoco.outputDir}/${jacoco.out.it.file}</sonar.jacoco.itReportPath>
-
-		<checkstyle.version>8.4</checkstyle.version>
+		<sonar.coverage.jacoco.xmlReportPath>target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPath>
 
 		<!-- Logger versions -->
 		<log4j2.version>2.14.0</log4j2.version>
@@ -81,20 +78,7 @@
 	</dependencyManagement>
 
 	<dependencies>
-		<!-- <dependency>
-			<groupId>org.apache.logging.log4j</groupId>
-			<artifactId>log4j-core</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.logging.log4j</groupId>
-			<artifactId>log4j-api</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-		</dependency> -->
-
+		
 		<!-- Spring boot Web starter -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -267,13 +251,19 @@
 		<dependency>
 		    <groupId>io.springfox</groupId>
 		    <artifactId>springfox-bean-validators</artifactId>
-		    <version>2.9.2</version> <!-- or any version you like -->
+		    <version>2.9.2</version>
 		</dependency>
 				<!-- SQL Server -->
 		<dependency>
 			<groupId>com.microsoft.sqlserver</groupId>
-			<artifactId>sqljdbc4</artifactId>
-			<version>${sqlserver.version}</version>
+			<artifactId>mssql-jdbc</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+		<!-- Oracle Db -->
+		<dependency>
+		  <groupId>com.oracle.database.jdbc</groupId>
+		  <artifactId>ojdbc10</artifactId>
+		  <version>19.3.0.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
@@ -290,10 +280,7 @@
 			<artifactId>h2</artifactId>
 			<scope>test</scope>
 		</dependency>
-       <!--  <dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-validation</artifactId>
-		</dependency> -->
+
 		<!-- Testing Dependencies -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -309,9 +296,9 @@
 					<artifactId>junit-vintage-engine</artifactId>
 				</exclusion>
 				<exclusion>
-		            <groupId>com.vaadin.external.google</groupId>
-		            <artifactId>android-json</artifactId>
-		        </exclusion>
+					<groupId>com.vaadin.external.google</groupId>
+					<artifactId>android-json</artifactId>
+				</exclusion>
 			</exclusions>
 		</dependency>
 
@@ -345,17 +332,13 @@
 			<version>${junit.platform.version}</version>
 			<scope>test</scope>
 		</dependency>
+
 		<dependency>
 			<groupId>com.vladmihalcea</groupId>
-		    <artifactId>hibernate-types-55</artifactId>
-		    <version>2.16.2</version>
+			<artifactId>hibernate-types-55</artifactId>
+			<version>2.16.2</version>
 		</dependency>
-		<dependency>
-			<groupId>org.mockito</groupId>
-			<artifactId>mockito-all</artifactId>
-			<version>1.9.5</version>
-			<scope>test</scope>
-		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -391,12 +374,6 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<configuration>
-					<arguments>
-						<argument>--spring.profiles.active=mock</argument>
-					</arguments>
-					<mainClass>com.deltadental.pcp.search.application.PcpSearchServiceApplication</mainClass>
-				</configuration>
 			</plugin>
 			<!-- Compiler plugin -->
 			<plugin>
@@ -404,7 +381,7 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>${maven-compiler.version}</version>
 				<configuration>
-					<release>11</release>
+					<release>${java.version}</release>
 					<forceJavacCompilerUse>true</forceJavacCompilerUse>
 				</configuration>
 			</plugin>
@@ -455,286 +432,57 @@
 				<artifactId>sonar-maven-plugin</artifactId>
 				<version>3.6.0.1398</version>
 			</plugin>
-
-			<!-- Checkstyle plugin -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-checkstyle-plugin</artifactId>
-				<version>3.1.1</version>
-				<executions>
-					<execution>
-						<id>validate</id>
-						<phase>validate</phase>
-						<configuration>
-							<configLocation>delta-platform-checkstyle.xml</configLocation>
-							<encoding>UTF-8</encoding>
-							<consoleOutput>false</consoleOutput>
-							<failsOnError>false</failsOnError>
-							<skip>true</skip>
-						</configuration>
-						<goals>
-							<goal>check</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<!-- Surefire unit test plugin -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<configuration>
-					<argLine>
-						--illegal-access=permit
-					</argLine>
-					<properties>
-						<property>
-							<name>listener</name>
-							<value>org.sonar.java.jacoco.JUnitListener</value>
-						</property>
-					</properties>
-					<testFailureIgnore>true</testFailureIgnore>
-				</configuration>
-			</plugin>
-			<!-- Failsafe integration test plugin -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-failsafe-plugin</artifactId>
-				<configuration>
-					<argLine>--illegal-access=permit -Xmx1024m -XX:MaxPermSize=256m}</argLine>
-					<properties>
-						<property>
-							<name>listener</name>
-							<value>org.sonar.java.jacoco.JUnitListener</value>
-						</property>
-					</properties>
-					<!-- Put failsafe reports with surefire to have access to tests failures/success 
-						reports in sonar -->
-					<reportsDirectory>${project.build.directory}/surefire-reports
-					</reportsDirectory>
-				</configuration>
-			</plugin>
+			<!-- Jacoco integration test plugin -->
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
 				<version>0.8.5</version>
-				<executions>
-					<!-- Prepares a variable, jacoco.agent.ut.arg, that contains the info 
-						to be passed to the JVM hosting the code being tested. -->
-					<execution>
-						<id>prepare-ut-agent</id>
-						<phase>process-test-classes</phase>
-						<goals>
-							<goal>prepare-agent</goal>
-						</goals>
-						<configuration>
-							<destFile>${sonar.jacoco.reportPath}</destFile>
-							<propertyName>jacoco.agent.ut.arg</propertyName>
-							<append>true</append>
-						</configuration>
-					</execution>
-					<!-- Prepares a variable, jacoco.agent.it.arg, that contains the info 
-						to be passed to the JVM hosting the code being tested. -->
-					<execution>
-						<id>prepare-it-agent</id>
-						<phase>pre-integration-test</phase>
-						<goals>
-							<goal>prepare-agent</goal>
-						</goals>
-						<configuration>
-							<destFile>${sonar.jacoco.itReportPath}</destFile>
-							<propertyName>jacoco.agent.it.arg</propertyName>
-							<append>true</append>
-						</configuration>
-					</execution>
-				</executions>
 			</plugin>
 		</plugins>
 	</build>
 	<profiles>
 		<profile>
-			<id>codeQuality</id>
+			<id>default</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<build>
+				<resources>
+					<resource>
+						<directory>src/main/resources</directory>
+					</resource>
+					<resource>
+						<targetPath>META-INF</targetPath>
+						<directory>src/main/resources/META-INF</directory>
+					</resource>
+				</resources>
+			</build>
+		</profile>
+		<profile>
+			<id>coverage</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
 			<build>
 				<plugins>
-					<!-- Checkstyle plugin -->
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-checkstyle-plugin</artifactId>
-						<version>3.1.1</version>
-						<executions>
-							<execution>
-								<id>validate</id>
-								<phase>validate</phase>
-								<configuration>
-									<configLocation>delta-platform-checkstyle.xml</configLocation>
-									<encoding>UTF-8</encoding>
-									<consoleOutput>false</consoleOutput>
-									<failsOnError>false</failsOnError>
-									<skip>true</skip>
-								</configuration>
-								<goals>
-									<goal>check</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-
-					<!-- Surefire unit test plugin -->
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-surefire-plugin</artifactId>
-						<version>2.22.2</version>
-						<configuration>
-							<argLine>
-								--illegal-access=permit
-							</argLine>
-							<properties>
-								<property>
-									<name>listener</name>
-									<value>org.sonar.java.jacoco.JUnitListener</value>
-								</property>
-							</properties>
-							<testFailureIgnore>true</testFailureIgnore>
-						</configuration>
-					</plugin>
-
-					<!-- Failsafe integration test plugin -->
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-failsafe-plugin</artifactId>
-						<version>2.22.2</version>
-						<configuration>
-							<argLine>--illegal-access=permit -Xmx1024m -XX:MaxPermSize=256m}</argLine>
-							<properties>
-								<property>
-									<name>listener</name>
-									<value>org.sonar.java.jacoco.JUnitListener</value>
-								</property>
-							</properties>
-							<!-- Put failsafe reports with surefire to have access to tests failures/success 
-								reports in sonar -->
-							<reportsDirectory>${project.build.directory}/surefire-reports
-							</reportsDirectory>
-						</configuration>
-					</plugin>
 					<plugin>
 						<groupId>org.jacoco</groupId>
 						<artifactId>jacoco-maven-plugin</artifactId>
-						<version>0.8.5</version>
 						<executions>
-							<!-- Prepares a variable, jacoco.agent.ut.arg, that contains the info 
-								to be passed to the JVM hosting the code being tested. -->
 							<execution>
-								<id>prepare-ut-agent</id>
-								<phase>process-test-classes</phase>
+								<id>prepare-agent</id>
 								<goals>
 									<goal>prepare-agent</goal>
 								</goals>
-								<configuration>
-									<destFile>${sonar.jacoco.reportPath}</destFile>
-									<propertyName>jacoco.agent.ut.arg</propertyName>
-									<append>true</append>
-								</configuration>
-							</execution>
-							<!-- Prepares a variable, jacoco.agent.it.arg, that contains the info 
-								to be passed to the JVM hosting the code being tested. -->
-							<execution>
-								<id>prepare-it-agent</id>
-								<phase>pre-integration-test</phase>
-								<goals>
-									<goal>prepare-agent</goal>
-								</goals>
-								<configuration>
-									<destFile>${sonar.jacoco.itReportPath}</destFile>
-									<propertyName>jacoco.agent.it.arg</propertyName>
-									<append>true</append>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-
-			<reporting>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-jxr-plugin</artifactId>
-						<version>3.0.0</version>
-					</plugin>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-checkstyle-plugin</artifactId>
-						<version>3.1.1</version>
-						<reportSets>
-							<reportSet>
-								<reports>
-									<report>checkstyleReport</report>
-								</reports>
-							</reportSet>
-						</reportSets>
-					</plugin>
-				</plugins>
-			</reporting>
-			<dependencies>
-				<dependency>
-					<groupId>org.sonarsource.java</groupId>
-					<artifactId>sonar-jacoco-listeners</artifactId>
-					<version>5.14.0.18788</version>
-					<scope>test</scope>
-				</dependency>
-			</dependencies>
-		</profile>
-
-		<!-- Integraton tests -->
-		<profile>
-			<id>run-its</id>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.codehaus.mojo</groupId>
-						<artifactId>build-helper-maven-plugin</artifactId>
-						<version>3.0.0</version>
-						<executions>
-							<execution>
-								<id>add-integration-test-sources</id>
-								<phase>generate-test-sources</phase>
-								<goals>
-									<goal>add-test-source</goal>
-								</goals>
-								<configuration>
-									<sources>
-										<source>src/e2e-test/java</source>
-									</sources>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-failsafe-plugin</artifactId>
-						<executions>
-							<execution>
-								<id>integration-test</id>
-								<phase>integration-test</phase>
-								<goals>
-									<goal>integration-test</goal>
-								</goals>
-								<configuration>
-									<includes>
-										<include>**/*IT.java</include>
-									</includes>
-								</configuration>
 							</execution>
 							<execution>
-								<id>verify</id>
-								<phase>verify</phase>
+								<id>report</id>
 								<goals>
-									<goal>verify</goal>
+									<goal>report</goal>
 								</goals>
 							</execution>
 						</executions>
 					</plugin>
-
 				</plugins>
 			</build>
 		</profile>
